grammar.bnf
# NUMBER NODE
<number> ::= <float> | <integer> | <exponential>

<exponential> ::= <float> "e" "+" <digits> |
                  <float> "e" "-" <digits> | 
                  <float> "e" <digits>     |
                  <integer> "e" "+" <digits> |
                  <integer> "e" "-" <digits> |
                  <integer> "e" <digits>

<float> ::= <integer> "." <digits>

<integer> ::= "+" <natural> | "-" <natural> | <natural>

<natural> ::= <nonzero> <digits> | <nonzero> "_" <digits> | <digit>

<digits> ::=  <digit> <digits> | <digit> "_" <digits> | <digit>

<digit> ::= <zero> | <nonzero> 

<zero> ::= "0" 

<nonzero> ::= "1" | "2" | "3" | "4" | "5" | "6" | "7" | "8" | "9"


# IDENTIFIER NODE

<identifier> ::= <letter> | <letter> <alphanumeric_characters> 

<alphanumerics> ::= <alphanumeric> | <alphanumeric> <alphanumerics>

<alphanumeric> ::= <digit> | <letter>

<letter> ::= <lowercase_letter> | <uppercase_letter>

<digit> ::= <zero> | <nonzero> 

<zero> ::= "0" 

<nonzero> ::= "1" | "2" | "3" | "4" | "5" | "6" | "7" | "8" | "9"

<lowercase_letter> ::= "a" | "b" | "c" | "d" | "e" | "f" | "g" | "h" | "i" | "j" | "k" | "l" | "m" 
		             | "n" | "o" | "p" | "q" | "r" | "s" | "t" | "u" | "v" | "w" | "x" | "y" | "z" 

<uppercase_letter> ::= "A" | "B" | "C" | "D" | "E" | "F" | "G" | "H" | "I" | "J" | "K" | "L" | "M" 
                     | "N" | "O" | "P" | "Q" | "R" | "S" | "T" | "U" | "V" | "W" | "X" | "Y" | "Z"


# NESTED IDENTIFIER NODE

<nested_identifier> ::= <identifier> | <identifier> <optional_whitespaces> "." <optional_whitespaces> <nested_identifier>

<optional_whitespaces> ::=  "" | <whitespace> <optional_whitespaces>

<whitespace> ::=  "\n" | "\r" | "\t" | " "
